fix jumping zoom bug

--- a/css/common.css
+++ b/css/common.css
@@ -62,10 +62,12 @@
  	display:inline-block;
  	margin-left:15px;
  }
+ /*
  #stereotaxic {
 	margin-left:50%;
 	transform:translate(-50%,0);
  }
+ */
 /* Login
 -----------------------------------------------------------------------------*/
 .loginbox {
@@ -121,6 +123,7 @@
 #atlasMaker {
 	color: white;
 	font-size:10px;
+	height:100%;
 }
 #atlasMaker #resizable {
 	position: relative;
